horizontal scroll fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,6 @@
 @layer base {
     body {
         @apply bg-[#141414] text-white
-        !scrollbar-thin !scrollbar-track-transparent !scrollbar-thumb-red-600;
     }
 
     header {
@@ -35,4 +34,8 @@
         @apply flex h-11 w-11 items-center justify-center rounded-full border-2 border-[gray]
         bg-[#2a2a2a]/60 transition hover:border-white hover:bg-white/10 ;
     }
+}
+
+body{
+    overflow-x: hidden;
 }
